@@ -1,8 +1,9 @@
-package dev.anhcraft.config.struct;
+package dev.anhcraft.config.blueprint;
 
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
+import java.util.Collections;
 import java.util.Map;
 import java.util.Set;
 
@@ -10,9 +11,9 @@ public class Schema {
     private final Class<?> type;
     private final Map<String, Property> properties;
 
-    public Schema(Class<?> type, Map<String, Property> properties) {
+    public Schema(@NotNull Class<?> type, @NotNull Map<String, Property> properties) {
         this.type = type;
-        this.properties = Map.copyOf(properties);
+        this.properties = Collections.unmodifiableMap(properties);
     }
 
     @NotNull
